--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -13,12 +13,13 @@
 
 .title {
     color: black;
-    font-size: 100px;
+    font-size: 50px;
+    width: 75%;
+    max-width: 45%;
     font-family: 'Indie Flower';
     border: 1px solid black;
     border-radius: 50px;
     box-shadow: 5px 10px;
-    width: 70%;
     left: 0;
     right: 0;
     top: 0;
@@ -49,6 +50,10 @@
 
 .bold {
     font-weight: bold;
+}
+
+.error {
+    color: red;
 }
 
 .quiz-content {
