--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,7 +1,7 @@
 .main-container {
     padding: 2rem;
     background-color: skyblue;
-    height: 800px;
+    height: 100%;
 }
 
 .title-container {
