make title able to reload page

--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -29,6 +29,10 @@
     background-color: white;
 }
 
+.title:hover {
+    cursor: pointer;
+}
+
 .input-container {
     background-color: white;
     margin: 1rem;
